--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -282,8 +282,8 @@ Increases production of spaceship parts by 25% = Uzay gemisi parçalarının ür
 
 # Diplomacy,Trade,Nations
 
-Requires [buildingName] to be built in the city = Şehirde [buildingName]'in olması gerekir
-Requires [buildingName] to be built in all cities = Tüm şehirlerde [buildingName]'in olması gerekir
+Requires [buildingName] to be built in the city = Şehirde [buildingName] yapısının olması gerekir
+Requires [buildingName] to be built in all cities = Tüm şehirlerde [buildingName] yapısının olması gerekir
 Provides a free [buildingName] in the city = Şehirde ücretsiz bir [buildingName] sağlar
 Requires worked [resource] near city = Şehir yakınlarında çalışılan [resource] gerektirir
 Wonder is being built elsewhere = Eser başka bir yerde inşa ediliyor
@@ -305,13 +305,12 @@ Diplomacy = Diplomasi
 War = Savaş
 Peace = Barış
 Declare war = Savaş ilan et
-Declare war on [civName]? = [civName]'e savaş ilan ettiniz mi?
+Declare war on [civName]? = [civName] devletine savaş mı ilan edeceksiniz?
 [civName] has declared war on us! = [civName] bize savaş ilan etti!
-[leaderName] of [nation] = [nation]'den [leaderName]
+[leaderName] of [nation] = [nation] lideri [leaderName]
 You'll pay for this! = Bunun bedelini ödeyeceksin!
 Negotiate Peace = Barışı Müzakere Edin
- # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = [civName] ile barış?
 Very well. = İyi peki.
 Farewell. = Elveda.
 Sounds good! = Kulağa güzel geliyor!
@@ -370,54 +369,30 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
- # Requires translation!
-Manila = 
- # Requires translation!
-Kuala Lumpur = 
- # Requires translation!
-Helsinki = 
- # Requires translation!
-Quebec City = 
- # Requires translation!
-Hanoi = 
- # Requires translation!
-Kathmandu = 
- # Requires translation!
-Cape Town = 
- # Requires translation!
-Sydney = 
- # Requires translation!
-Zanzibar = 
- # Requires translation!
-Singapore = 
- # Requires translation!
-Edinburgh = 
- # Requires translation!
-Almaty = 
- # Requires translation!
-Sidon = 
- # Requires translation!
-Kabul = 
- # Requires translation!
-Brussels = 
- # Requires translation!
-Venice = 
- # Requires translation!
-Genoa = 
- # Requires translation!
-Ur = 
- # Requires translation!
-Tyre = 
- # Requires translation!
-Dublin = 
- # Requires translation!
-Antwerp = 
- # Requires translation!
-Rio de Janeiro = 
- # Requires translation!
-Florence = 
- # Requires translation!
-Milan = 
+Manila = Manila
+Kuala Lumpur = Kuala Lumpur
+Helsinki = Helsinki
+Quebec City = Quebec Şehri
+Hanoi = Hanoi
+Kathmandu = Katmandu
+Cape Town = Cape Town
+Sydney = Sidney
+Zanzibar = Zanzibar
+Singapore = Singapur
+Edinburgh = Edinburg
+Almaty = Almatı
+Sidon = Sidon
+Kabul = Kabul
+Brussels = Brüksel
+Venice = Venedik
+Genoa = Ceneviz
+Ur = Ur
+Tyre = Sur Şehri
+Dublin = Dublin
+Antwerp = Antwerp
+Rio de Janeiro = Rio de Janeiro
+Florence = Floransa
+Milan = Milan
 
 Provides [amountOfCulture] culture at 30 Influence = 30 Etki'de [amountOfCulture] kültürü sağlar
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 30 Etki'de başkente 3, diğer şehirlere 1 adet gıda sağlar
@@ -444,8 +419,8 @@ Retract offer = Teklifi geri çek
 What do you have in mind? = Aklında ne var?
 Our items = Elimizdekiler
 Our trade offer = Ticaret teklifimiz
-[otherCiv]'s trade offer = [otherCiv] 'in ticari teklifi
-[otherCiv]'s items = [otherCiv]'in kullanıcının elindekiler
+[otherCiv]'s trade offer = [otherCiv] devleinin ticari teklifi
+[otherCiv]'s items = [otherCiv] devletinin elindekiler
 Pleasure doing business with you! = Seninle iş yapmak büyük bir zevk!
 I think not. = Bence hayır.
 That is acceptable. = Bu kabul edilebilir
@@ -460,7 +435,7 @@ Cities = Şehirler
 Technologies = Teknolojiler
 Declarations of war = Savaş ilanları
 Introduction to [nation] = [nation] ile tanıştırma
-Declare war on [nation] = [nation]'a savaş ilan etme
+Declare war on [nation] = [nation] devletine savaş ilan et
 Luxury resources = Lüks kaynaklar
 Strategic resources = Taktiksel kaynaklar
 replaces = yerine
@@ -470,7 +445,7 @@ National ability = Ulusal yetenek
 
 # Nations
 
-Babylon = Babiller
+Babylon = Babil
 Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = Yazmayı keşfettiğinizde ücretsiz Büyük Bilim Adamı alın, Büyük Bilim Adamlarını 50% daha hızlı kazanın
 Nebuchadnezzar II = II. Nebukadnetsar
 
@@ -496,8 +471,7 @@ Napoleon = Napolyon
 
 Russia = Rusya
 Catherine = Katerina
- # Requires translation!
-Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = 
+Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = Stratejik Kaynaklar +1 Üretim sağlarken, Atlar, Demir ve Uranyum Kaynakları iki katını sağlar
 
 Rome = Roma
 Augustus Caesar = Augustus Sezar
@@ -523,7 +497,7 @@ India = Hindistan
 Gandhi = Gandhi
 Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = Şehirlerdeki mutsuzluk ikiye katlandı, Vatandaş sayısındaki mutsuzluk yarıya indi.
 
-The Ottomans = Osmanlılar
+The Ottomans = Osmanlı
 Suleiman I = Kanun-i Sultan Süleyman
 Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = Deniz birimi bakımı için normal maliyetin sadece üçte birini ödeyin. Yakın muharebe deniz birimleri, mağlup deniz birliklerini yakalamak için 1/3 şansa sahiptir.
 
@@ -531,7 +505,7 @@ Korea = Kore
 Sejong = Sejong
 +2 Science for all specialists and Great Person tile improvements = Tüm uzmanlar için +2 Bilim ve Büyük Kişi bölge geliştirmeleri
 
-Iroquois = İrokualar
+Iroquois = İrokua
 Hiawatha = Hiawatha
 All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = Tüm birimler, sanki yolları varmış gibi, dost bir bölgedeki Orman ve Sık Ormanlardan geçer. Bu bölgeler Teker araştırdıktan sonra Şehir Bağlantıları kurmak için kullanılabilir.
 
@@ -569,14 +543,10 @@ Map type = Harita türü
 Generated = Oluşturuldu
 Existing = Mevcut
 Map generation type = Harita oluşturma türü
- # Requires translation!
-Default = 
- # Requires translation!
-Pangaea = 
- # Requires translation!
-Perlin = 
- # Requires translation!
-Continents = 
+Default = Varsayılan
+Pangaea = Pangea
+Perlin = Perlin
+Continents = Kıtalar
 Number of city-states = Şehir devletlerinin sayısı
 One City Challenge = Tek Şehir Meydan Okuması
 No barbarians = Barbar yok
@@ -675,9 +645,9 @@ Downloading... = İndiriliyor ...
 Could not download music! = Müzik indirilemedi!
 Show = Göster
 Hide = Gizle
-Show worked tiles = Çalışan karoları göster
+Show worked tiles = Çalışılan alanları göster
 Show resources and improvements = Kaynakları ve geliştirmeleri göster
-Check for idle units = Boş birimlerini kontrol edin
+Check for idle units = Boş birimleri kontrol edin
 Move units with a single tap = Tek dokunuşla birimleri taşı
 Show tutorials = Eğiticileri göster
 Auto-assign city production = Şehir üretimini otomatik ata
@@ -707,7 +677,7 @@ Work has started on [construction] = [construction] üzerinde çalışılmaya ba
 Your Golden Age has ended. = Altın Çağınız sona erdi
 [cityName] has been razed to the ground! = [cityName] yerle bir edildi!
 We have conquered the city of [cityname]! = [cityname] şehrini fethettik!
-An enemy [unit] has attacked [cityname] = Bir düşman [unit] [cityname]'e saldırdı
+An enemy [unit] has attacked [cityname] = Bir düşman [unit] [cityname] şehrine saldırdı
 An enemy [unit] has attacked our [ourUnit] = Bir düşman [unit] [ourUnit] birimimize saldırdı
 Enemy city [cityName] has attacked our [ourUnit] = Düşman şehri [cityName] [ourUnit] birimimize saldırdı
 An enemy [unit] has captured [cityname] = Bir düşman [unit], [cityname] ele geçirdi
@@ -727,7 +697,7 @@ An enemy [unit] was spotted in our territory = Bölgemizde bir düşman [unit] t
 [amount] enemy units were spotted in our territory = [amount] düşman birimi bölgemizde tespit edildi
 The civilization of [civName] has been destroyed! = [civName] medeniyeti yok edildi!
 The City-State of [name] has been destroyed! = [name] Şehir Devleti yok edildi!
-We have captured a barbarian encampment and recovered [goldAmount] gold! = Bir barbar kampı yakaladık ve [goldAmount] altını geri kazandık!
+We have captured a barbarian encampment and recovered [goldAmount] gold! = Bir barbar kampı aldık ve [goldAmount] altını geri kazandık!
 A barbarian [unitType] has joined us! = Bir barbar [unitType] bize katıldı!
 We have found survivors in the ruins - population added to [cityName] = Yıkıntılarda kurtulanlar bulduk - nüfus [cityName]
 We have discovered the lost technology of [techName] in the ruins! = Kalıntılarda kayıp [techName] teknolojisini keşfettik!
@@ -755,15 +725,13 @@ One of our trades with [nation] has been cut short = [nation] ile yaptığımız
 [nation] refused to stop settling cities near us! = [nation] yakınımızdaki şehirlere yerleşmeyi bırakmayı reddetti!
 We have allied with [nation]. = [nation] ile ittifak oluşturduk.
 We have lost alliance with [nation]. = [nation] ile ittifakımızı kaybettik.
- # Requires translation!
-We have discovered [naturalWonder]! = 
+We have discovered [naturalWonder]! = [naturalWonder] doğal harikasını keşfettik!
 We have received [goldAmount] Gold for discovering [naturalWonder] = [naturalWonder] keşfettiğimiz için [goldAmount] Altın aldık 
 Your relationship with [cityStateName] is about to degrade = [cityStateName] ile ilişkiniz bozulmak üzere
 Your relationship with [cityStateName] degraded = [cityStateName] ile ilişkiniz düştü
 A new barbarian encampment has spawned! = Yeni bir barbar kampı ortaya çıktı!
 Received [goldAmount] Gold for capturing [cityName] = [cityName] ele geçirildiği için [goldAmount] Altın alındı
- # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Teklif edilen ticaret talebimiz artık geçerli değil!
 
 # World Screen UI
 
@@ -772,7 +740,7 @@ Waiting for other players... = Diğer oyuncular bekleniyor ...
 in = içinde
 Next turn = Sonraki tur
 Turn = Tur
-turns = turlar
+turns = tur
 turn = tur
 Next unit = Sonraki birim
 Pick a policy = Bir politika seçin
@@ -873,14 +841,14 @@ The city will not produce anything. = Şehir hiçbir şey üretmeyecek
 
 Pick a tech = Bir teknoloji seçin
 Pick a free tech = Ücretsiz bir teknoloji seçin
-Research [technology] = Araştırma [technology]
+Research [technology] = [technology] Araştır
 Pick [technology] as free tech = Ücretsiz teknoloji olarak [technology] 'yi seçin
 Units enabled = Birimler etkin
 Buildings enabled = Etkin binalar
 Wonder = Büyük Harika
 National Wonder = Ulusal Harika
 National Wonders = Ulusal Harikalar
-Wonders enabled = Harikalar etkin
+Wonders enabled = Etkin Harikalar
 Tile improvements enabled = Bölge geliştirmeleri etkin
 Reveals [resource] on the map = Haritada [resource] gösterir
 XP for new units = Yeni birimler için XP
@@ -944,11 +912,10 @@ Treasury deficit = Hazine açığı
 Science victory = Bilim zaferi
 Cultural victory = Kültürel zafer
 Conquest victory = Fetih zaferi
-Complete all the spaceship parts\n to win! = Kazanmak için\n tüm uzay gemisi parçalarını tamamla!
+Complete all the spaceship parts\n to win! = Kazanmak için\n tüm uzay gemisi parçalarını yap!
 Complete 5 policy branches\n to win! = Kazanmak için\n 5 politika dalı tamamlayın!
 Destroy all enemies\n to win! = Kazanmak için\n tüm düşmanları yok et! 
- # Requires translation!
-You have won a scientific victory! = 
+You have won a scientific victory! = Bir bilimsel zafer kazandınız!
 You have won a cultural victory! = Bir kültürel zafer kazandınız!
 You have won a domination victory! = Bir hakimiyet zaferi kazandınız!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Kültürünüzün müthiş gücü ile zafer kazandınız. Medeniyetinizin büyüklüğü - anıtlarının ihtişamı ve sanatçılarının gücü - dünyayı hayrete düşürdü! Güzellik yorgun bir kalbe mutluluk getirdiği sürece şairler sizi onurlandıracaktır.
@@ -956,7 +923,7 @@ The world has been convulsed by war. Many great and powerful civilizations have 
 You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = Bilimin ustalığıyla zafere ulaştınız! Doğanın gizemlerini fethettiniz ve halkınızı cesur yeni bir dünyaya yolculuk ettiniz! Yıldızlar gece gökyüzünde yantığı sürece zaferin hatırlanacak!
 You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = Yenildin. Medeniyetiniz birçok düşmanı bunalmış durumda. Ama halkınız umutsuzluğa kapılmıyor, çünkü bir gün geri döneceğinizi biliyor ve onları zafere götürüyorlar!
 One more turn...! = Bir tur daha ...!
-Built Apollo Program = Yapılmış Apollo Programı
+Built Apollo Program = Apollo Programını Yap
 Destroy [civName] = [civName] yok et
 Our status = Durumumuz
 Global status = Küresel vaziyet
@@ -1145,7 +1112,7 @@ Gain 2 free technologies = 2 ücretsiz teknoloji kazanın
 Rationalism Complete = Akılcılık Tamamlandı
 +1 gold from all science buildings = Tüm bilim binalarından +1 altın
 
-Freedom = Özgürlük
+Freedom = İstiklâl
 +25% great people rate = +25% harika insan oranı
 Constitution = Anayasa
 +2 culture from each wonder = Her harikadan +2 kültür
@@ -1157,7 +1124,7 @@ Free Speech = Serbest Konuşma
 +1 culture for every 2 citizens = Her 2 vatandaş için +1 kültür
 Democracy = Demokrasi
 Specialists produce half normal unhappiness = Uzmanlar normal mutsuzluğun yarısını üretir
-Freedom Complete = Özgürlük Tamamlandı
+Freedom Complete = İstiklâl Tamamlandı
 Tile yield from great improvement +100%, golden ages increase by 50% = Büyük gelişmeden +100% bölge verimi, altın çağlar 50% artar
 
 Autocracy = Otokrasi
@@ -1392,12 +1359,12 @@ Grants Rejuvenation (all healing effects doubled) to adjacent military land unit
 Cattle = Büyükbaş
 Sheep = Koyun
 Deer = Geyik 
-Bananas = Muzlar
+Bananas = Muz
 Wheat = Buğday
 Stone = Taş
 Fish = Balık
 Bison = Bizon
-Horses = Atlar
+Horses = At
 Iron = Demir
 Coal = Kömür 
 Oil = Petrol
@@ -1405,8 +1372,8 @@ Aluminum = Alüminyum
 Uranium = Uranyum
 Furs = Kürk
 Cotton = Pamuk 
-Dyes = Boyalar
-Gems = Elmaslar
+Dyes = Boya
+Gems = Elmas
 Silver = Gümüş 
 Incense = Tütsü
 Ivory = Fildişi 
@@ -1415,8 +1382,8 @@ Spices = Baharat
 Wine = Şarap
 Sugar = Şeker
 Marble = Mermer
-Pearls = İnciler
-Whales = Balinalar
+Pearls = İnci
+Whales = Balina
 Copper = Bakır 
 Cocoa = Kakao
 Crab = Yengeç 
@@ -1515,7 +1482,7 @@ Logistics = Lojistik
 Trebuchet = Trebüşe
 Hwach'a = Hwach'a
 Limited Visibility = Sınırlı Görüş
-Longswordsman = Longswordsman
+Longswordsman = Uzman Kılıçlı
 Pikeman = Kargılı
 Landsknecht = Paralı Şövalye
 Knight = Şövalye
@@ -1531,8 +1498,7 @@ Turtle Ship = Kaplumbağa Gemi
 +1 Visibility Range = +1 Görüş Mesafesi
 +2 Visibility Range = +2 Görüş Mesafesi
 Cannon = Top
- # Requires translation!
-Musketman = 
+Musketman = Arkebüslü
 Musketeer = Silâhşör
 Janissary = Yeniçeri
 Tercio = Tercio
@@ -1607,10 +1573,9 @@ Bonus for units in 2 tile radius 15% = 2 kare yarıçapındaki birimler için 15
 # Promotions
 
 Pick promotion = Terfi seçin
- # Requires translation!
- OR  = 
-Bonus vs [unitType] = [unitType]'a karşı bonus
-Penalty vs [unitType] = [unitType]'a karşı zayıflık
+ OR  =  YA DA 
+Bonus vs [unitType] = [unitType]'e karşı bonus
+Penalty vs [unitType] = [unitType]'e karşı zayıflık
 Accuracy I = Doğruluk 1
 Accuracy II = Doğruluk 2
 Accuracy III = Doğruluk 3
@@ -1632,11 +1597,11 @@ Scouting III = Keşif 3
 Cover I = Sığınak 1
 Cover II = Sığınak 2
 +25% Defence against ranged attacks = Menzili saldırılara karşı +25% daha iyi savunma 
-March = Birim Yürütmek
+March = Yürüyüş
 Charge = Hücüm
 wounded units = yaralı birimler
 Mobility = Hareketlilik 
-Volley = Yayılım Ateş
+Volley = Fatih
 Sentry = Nöbetçi 
 Extended Range = Genişletilmiş Menzil
 +1 Range = +1 Menzil
@@ -1692,8 +1657,7 @@ Reduces damage taken from interception by 50% = Toplamadan alınan hasarı% 50 a
 Bonus when intercepting [amount]% = [amount]% ele geçirilirken bonus
 Ambush I = Pusu 1
 Ambush II = Pusu 2
- # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = 2 uçak taşıyabilir
 Haka War Dance = Haka Savaş Dansı
 -10% combat strength for adjacent enemy units = Bitişik düşman birimleri için% -10 savaş gücü
 Rejuvenation = Gençleştirme
