Template for the translation strings

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -3110,6 +3110,14 @@ Bonus when intercepting [amount]% =
 Ambush I = 
  # Requires translation!
 Ambush II = 
+Armor Plating I = Armor Plating I
+Armor Plating II = Armor Plating II
+Armor Plating III = Armor Plating III
++25% Combat Bonus when defending = +25% Combat Bonus when defending
+Flight Deck I = Flight Deck I
+Flight Deck II = Flight Deck II
+Flight Deck III = Flight Deck III
+Can carry 1 extra air unit = Can carry 1 extra air unit
 Can carry 2 aircraft = Can carry 2 aircraft
  # Requires translation!
 Haka War Dance = 
