--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -1660,6 +1660,14 @@ Reduces damage taken from interception by 50% =
 Bonus when intercepting [amount]% = 
 Ambush I = 
 Ambush II = 
+Armor Plating I = 
+Armor Plating II = 
+Armor Plating III = 
++25% Combat Bonus when defending = 
+Flight Deck I = 
+Flight Deck II = 
+Flight Deck III = 
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = 
 Haka War Dance = 
 -10% combat strength for adjacent enemy units = 
