new french translations

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -311,7 +311,7 @@ Declare war on [civName]? = Déclarer la guerre à [civName]?
 You'll pay for this! = Vous allez payer pour cela!
 Negotiate Peace = Négocier la paix
  # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = Faire la Paix avec [civName] ?
 Very well. = Très bien.
 Farewell. = Adieu.
 Sounds good! = Très bien!
@@ -371,53 +371,53 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Manila = 
+Manila = Manille
  # Requires translation!
-Kuala Lumpur = 
+Kuala Lumpur = Kuala Lumpur
  # Requires translation!
-Helsinki = 
+Helsinki = Helsinki
  # Requires translation!
-Quebec City = 
+Quebec City = Québec 
  # Requires translation!
-Hanoi = 
+Hanoi = Hanoï
  # Requires translation!
-Kathmandu = 
+Kathmandu = Katmandou
  # Requires translation!
-Cape Town = 
+Cape Town = Le Cap
  # Requires translation!
-Sydney = 
+Sydney = Sydney
  # Requires translation!
-Zanzibar = 
+Zanzibar = Zanzibar
  # Requires translation!
-Singapore = 
+Singapore = Singapour
  # Requires translation!
-Edinburgh = 
+Edinburgh = Édimbourg
  # Requires translation!
-Almaty = 
+Almaty = Almaty
  # Requires translation!
-Sidon = 
+Sidon = Sidon
  # Requires translation!
-Kabul = 
+Kabul = Kaboul
  # Requires translation!
-Brussels = 
+Brussels = Bruxelles
  # Requires translation!
-Venice = 
+Venice = Venise
  # Requires translation!
-Genoa = 
+Genoa = Gênes
  # Requires translation!
-Ur = 
+Ur = Ur
  # Requires translation!
-Tyre = 
+Tyre = Tyr
  # Requires translation!
-Dublin = 
+Dublin = Dublin
  # Requires translation!
-Antwerp = 
+Antwerp = Anvers
  # Requires translation!
-Rio de Janeiro = 
+Rio de Janeiro = Rio de Janeiro
  # Requires translation!
-Florence = 
+Florence = Florence
  # Requires translation!
-Milan = 
+Milan = Milan
 
 Provides [amountOfCulture] culture at 30 Influence = Fournit [amountOfCulture] de Culture à 30 d'influence
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Fournit 3 Nourriture à la capitale et 1 nourriture pour les autres villes à 30 d'influence
@@ -569,13 +569,13 @@ Generated = Généré
 Existing = Existant
 Map generation type = Type de carte générée
  # Requires translation!
-Default = 
+Default = Défaut
  # Requires translation!
-Pangaea = 
+Pangaea = Pangée
  # Requires translation!
-Perlin = 
+Perlin = Perlin
  # Requires translation!
-Continents = 
+Continents = Continents
 Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
@@ -761,7 +761,7 @@ Your relationship with [cityStateName] degraded = Notre relation avec [cityState
 A new barbarian encampment has spawned! = Un nouveau campement barbare est apparu !
 Received [goldAmount] Gold for capturing [cityName] = Vous recevez [goldAmount] Or pour la capture de [cityName]
  # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Notre demande commerciale n'est plus pertinente !
 
 # World Screen UI
 
@@ -1422,7 +1422,7 @@ Truffles = Truffe
 Farm = Ferme
 Lumber mill = Scierie
 Mine = Mine
-Trading post = Comptoire commercial
+Trading post = Comptoir commercial
 Camp = Campement
 Oil well = Puit de pétrole
 Pasture = Pâturage
@@ -1688,7 +1688,7 @@ Bonus when intercepting [amount]% = Bonus en interception de [amount]%
 Ambush I = Embuscade I
 Ambush II = Embuscade II
  # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = Peut transporter 2 avions
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
 Rejuvenation = Rajeunissement
